--- a/build.gradle
+++ b/build.gradle
@@ -202,6 +202,7 @@ dependencyManagement {
     dependencySet(group: 'com.google.guava', version: '30.0-jre') {
       entry 'guava'
     }
+    dependency group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
   }
 }
 
