RWA-237 Refactor task endpoint (#96)
* workflow-api

* workflow-api

* refactored wa-workflow-api controllers

* refactored wa-workflow-api controllers

* refactored wa-workflow-api and added tests

* authorise case-event-handler service

* fixed tests

* fix CVE-2020-17527

* add wildcard parameter to clean up warning from intelliJ

* clean up more Unbounded warning

* add dueDate logic and cover it with integration tests

* rename test class to mach the original class name

* fix functional tests to work with the dueDate logic

* fix format issues with the dueDate

* add functional test to cover overdue task

* add functional tests

* add overdue task scenario

* do not output to the console
rename caseReference to caseId
remove local profile

Co-authored-by: lewis150193 <lewis.williams@hmcts.net>
Co-authored-by: david.crespo <david.crespo@hmcts.net>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,11 +26,6 @@ camunda:
 govUkHolidays:
   url: https://www.gov.uk/
 
-#logging:
-#  level:
-#    org.springframework: debug
-
-#If you use a database then uncomment below lines and update db properties accordingly
 spring:
   application:
     name: WA workflow api
@@ -51,6 +46,7 @@ security:
     - "/favicon.ico"
   authorisedServices:
     - "wa_workflow_api"
+    - "wa_case_event_handler"
 
 auth:
   provider:
