--- a/build.gradle
+++ b/build.gradle
@@ -286,7 +286,7 @@ def versions = [
   sonarPitest  : '0.5',
   camunda      : '7.14.0',
   logbook      : '2.6.2',
-  pactVersion  : '4.1.7',
+  pactVersion  : '4.1.7'
 ]
 
 ext.libraries = [
@@ -309,7 +309,6 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-rest'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: versions.springBoot
   implementation group: 'org.springframework.security', name: 'spring-security-test', version: '5.7.1'
 
   implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springDoc
