--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.1.0'
-  id 'org.springframework.boot' version '2.7.5'
-  id 'org.owasp.dependencycheck' version '7.2.1'
+  id 'org.springframework.boot' version '2.7.7'
+  id 'org.owasp.dependencycheck' version '7.4.4'
   id 'com.github.ben-manes.versions' version '0.42.0'
   id 'org.sonarqube' version '3.4.0.2513'
   id 'info.solidsoft.pitest' version '1.9.0'
@@ -280,7 +280,7 @@ def versions = [
   pactVersion   : '4.1.7',
   testcontainers: '1.17.4',
   log4j         : '2.19.0',
-  tomcat        : '9.0.68'
+  tomcat        : '9.0.69'
 ]
 
 ext.libraries = [
@@ -322,8 +322,8 @@ dependencies {
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: versions.log4j
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: versions.log4j
 
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.68'
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.68'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: versions.tomcat
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: versions.tomcat
 
   implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.5.Final'
 
