RWA-803-Check FTs use AAT DB  (#571)
* revert all changes

* wa-chart implemented

* wa-chart implemented

* allow new build

* CAMUNDA_URL changed

* postgres secret added to jenkins file

* wa services disabled

* postgres secret removed from jenkins file

* try to override camunda db password

* try to disable wa services

* postgres disbaled

* taskManagement disbaled

* removed CapturedOutput extension

* taskManagement disbaled

* Correct DB names and password

* postgres fileds arranged

* postgres credentials changed

* created sh files for project and configured jenkins file

* camunda url changed

* log added

* S2S_SECRET renamed

* CAMUNDA_BASE_URL changed

* Correct product name

* Correct jenkin envs

* suppress CVE-2023-20863

* Add db url and password for functional test

* postgres disabled

* H2 db added for FTs

* postgres enabled

* testing controller added

* test coverage increased

* allow new build

* test coverage increased

* postgres credentials updated

* H2 DB enabled

* resolve failing tests

* resolve checkStyle issue

* Update camunda url to use https

* correct camunda url for ffunctional test

* Setup staging pod configuration

* Remove camunda url config for aat

* resolve cv issues

---------

Co-authored-by: dharmendra kumar <dharmendra.kumar@hmcts.net>

--- a/charts/wa-workflow-api/values.yaml
+++ b/charts/wa-workflow-api/values.yaml
@@ -19,6 +19,7 @@ java:
     POSTGRES_NAME: wa_workflow_api
     POSTGRES_CONNECTION_OPTIONS: "?sslmode=require"
     WA_TASK_MANAGEMENT_API_URL: "http://wa-task-management-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal"
+    ENVIRONMENT: "{{ .Values.global.environment }}"
   keyVaults:
     wa:
       secrets:
@@ -32,3 +33,6 @@ java:
           alias: POSTGRES_USERNAME
         - name: ld-secret
           alias: LAUNCH_DARKLY_SDK_KEY
+
+  wa:
+    enabled: false
