--- a/charts/wa-workflow-api/Chart.yaml
+++ b/charts/wa-workflow-api/Chart.yaml
@@ -3,10 +3,16 @@ appVersion: "1.0"
 description: A Helm chart for wa-workflow-api App
 name: wa-workflow-api
 home: https://github.com/hmcts/wa-workflow-api
-version: 0.0.29
+version: 0.0.31
 maintainers:
   - name: HMCTS wa team
 dependencies:
   - name: java
     version: 4.1.0
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+
+  # WA
+  - name: wa
+    version: 0.1.5
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    condition: wa.enabled
