--- a/charts/wa-workflow-api/values.preview.template.yaml
+++ b/charts/wa-workflow-api/values.preview.template.yaml
@@ -3,12 +3,12 @@ java:
   ingressHost: ${SERVICE_FQDN}
   environment:
     RESTART_APP: 1
-    CAMUNDA_URL: "http://camunda-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal/engine-rest"
+    CAMUNDA_URL: "http://{{ .Release.Name }}-camunda/engine-rest"
     S2S_URL: "http://rpe-service-auth-provider-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal"
+    POSTGRES_NAME: wa_workflow_api
     POSTGRES_HOST: "{{ .Release.Name }}-postgresql"
-    POSTGRES_NAME: "{{ .Values.postgresql.auth.database}}"
-    POSTGRES_USERNAME: "{{ .Values.postgresql.auth.username}}"
-    POSTGRES_PASSWORD: "{{ .Values.postgresql.auth.password}}"
+    POSTGRES_USERNAME: hmcts
+    POSTGRES_PASSWORD: hmcts
     POSTGRES_CONNECTION_OPTIONS: ""
   keyVaults:
     wa:
@@ -17,7 +17,21 @@ java:
           alias: azure.application-insights.instrumentation-key
         - name: s2s-secret-workflow-api
           alias: S2S_SECRET_WORKFLOW_API
-  postgresql:
-    enabled: true
-    auth:
-      database: wa_workflow_api
+
+wa:
+  enabled: true
+  wa:
+    taskManagement:
+      enabled: false
+    taskMonitor:
+      enabled: false
+    eventHandler:
+      enabled: false
+    workflow:
+      enabled: false
+    taskBatchCron:
+      enabled: false
+    messageCron:
+      enabled: false
+    servicebus:
+      enabled: false
