--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.1.0'
-  id 'org.springframework.boot' version '2.7.15'
+  id 'org.springframework.boot' version '2.7.18'
   id 'org.owasp.dependencycheck' version '8.2.1'
   id 'com.github.ben-manes.versions' version '0.42.0'
   id 'org.sonarqube' version '4.2.0.3129'
@@ -286,7 +286,7 @@ def versions = [
   pactVersion   : '4.1.7',
   testcontainers: '1.18.0',
   log4j         : '2.19.0',
-  tomcat        : '9.0.81'
+  tomcat        : '9.0.83'
 ]
 
 ext.libraries = [
@@ -315,6 +315,8 @@ dependencies {
   implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springDoc
 
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.6'
+
+  implementation group: 'org.springframework.security', name: 'spring-security-rsa', version: '1.1.1'
 
   implementation group: 'org.zalando', name: 'logbook-spring-boot-starter', version: versions.logbook
   implementation 'org.zalando:problem-spring-web-starter:0.27.0'
